--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite + React + TS</title>
-  <script src="/public/js/snarkjs.min.js"></script>
+  <script src="/js/snarkjs.min.js"></script>
 </head>
 
 <body>
